--- a/apps/forge/index.html
+++ b/apps/forge/index.html
@@ -7,7 +7,7 @@
         <title>Mattrax</title>
     </head>
     <body class="h-full">
-        <div id="root" class="flex flex-col"></div>
+        <div id="root" class="flex h-full flex-col"></div>
         <script type="module" src="/src/index.tsx"></script>
     </body>
 </html>
