reorganise api package

--- a/apps/forge/index.html
+++ b/apps/forge/index.html
@@ -8,6 +8,6 @@
     </head>
     <body class="h-full">
         <div id="root" class="flex h-full flex-col"></div>
-        <script type="module" src="/src/index.tsx"></script>
+        <script type="module" src="/src/app.tsx"></script>
     </body>
 </html>
