--- a/apps/landing/public/auth.html
+++ b/apps/landing/public/auth.html
@@ -1,31 +1,31 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Authenticating...</title>
-  </head>
-  <body>
-    <!-- This page is just for me to use when testing MDM stuff, it's not actually used by Mattrax -->
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Authenticating...</title>
+    </head>
+    <body>
+        <!-- This page is just for me to use when testing MDM stuff, it's not actually used by Mattrax -->
 
-    <h3>MDM Federated Login</h3>
-    <form id="loginForm" method="post">
-      <p>
-        <input
-          type="hidden"
-          name="wresult"
-          value="TODOSpecialTokenWhichVerifiesAuth"
-        />
-      </p>
-      <input type="submit" value="Login" />
-    </form>
+        <h3>MDM Federated Login</h3>
+        <form id="loginForm" method="post">
+            <p>
+                <input
+                    type="hidden"
+                    name="wresult"
+                    value="TODOSpecialTokenWhichVerifiesAuth"
+                />
+            </p>
+            <input type="submit" value="Login" />
+        </form>
 
-    <script>
-      const form = document.getElementById("loginForm");
-      const urlParams = new URLSearchParams(window.location.search);
+        <script>
+            const form = document.getElementById("loginForm");
+            const urlParams = new URLSearchParams(window.location.search);
 
-      form.action = urlParams.get("appru");
-      form.submit();
-    </script>
-  </body>
+            form.action = urlParams.get("appru");
+            form.submit();
+        </script>
+    </body>
 </html>
