configure: Break out search

--- a/apps/configure/index.html
+++ b/apps/configure/index.html
@@ -11,7 +11,7 @@
     />
     <meta property="og:image" content="https://mattrax.app/ogp.png" />
   </head>
-  <body>
+  <body class="overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
