--- a/apps/configure/index.html
+++ b/apps/configure/index.html
@@ -13,6 +13,26 @@
   </head>
   <body class="overflow-x-hidden">
     <div id="root"></div>
+
+    <noscript class="h-screen w-screen flex justify-center items-center">
+      <div class="w-full flex flex-col items-center justify-center">
+        <div
+          class="sm:mx-auto sm:w-full sm:max-w-md flex items-center justify-center pb-2"
+        >
+          <h2
+            class="mt-4 text-center text-4xl font-bold leading-9 tracking-tight text-gray-900"
+          >
+            Mattrax
+          </h2>
+        </div>
+
+        <p class="text-muted-foreground text-md text-center">
+          Your browser does not support JavaScript. <br />
+          Please enable it to use Mattrax.
+        </p>
+      </div>
+    </noscript>
+
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
