--- a/apps/configure/index.html
+++ b/apps/configure/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="overflow-hidden">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,8 +11,8 @@
     />
     <meta property="og:image" content="https://mattrax.app/ogp.png" />
   </head>
-  <body class="overflow-x-hidden">
-    <div id="root"></div>
+  <body class="disable-animations">
+    <div id="root" class="h-screen overflow-y-auto overflow-x-hidden"></div>
 
     <noscript class="h-screen w-screen flex justify-center items-center">
       <div class="w-full flex flex-col items-center justify-center">
